# Money-Tracker-TG-Bot

./: .gitignore  README.md  bot.py  configs.py  db_update.py  pyproject.toml  requirements.txt  settings.py
bot/: filters.py  fsm_states.py  keyboards.py  main_router.py  middleware.py
bot/filters/: __init__.py  user_exists.py
bot/internal/: __init__.py  check_input.py  graphs.py
bot/internal/stats/: __init__.py  account.py  expense_limits_stats.py  (+1 more)
bot/keyboards/: bool_keyboard.py  categories_keyboard.py  expense_limits_keyboard.py  limit_period_keyboard.py  period_start_keyboard.py  registration_keyboard.py  skip_keyboard.py  stats_keyboard.py  subcategories_keyboard.py  today_keyboard.py
bot/middleware/: db_connection.py  user_exists_middleware.py  user_language.py
bot/routers/: __init__.py  common_router.py  delete_router.py  export_router.py  general_router.py  main_router.py  new_router.py  stats_router.py
bot/states/: __init__.py  delete_expense_limit.py  export_data.py  new_expense.py  new_expense_limit.py  new_income.py  registration.py
bot/static/: about_en.txt  about_ru.txt  commands.json  commands.py  messages.py  user_languages.py
bot/webapp/: index.html  webapp.py
db/: __init__.py  connection.py  expense_limit_operations.py  expense_operations.py  income_operations.py  shared_schema.py  user_based_schema.py  user_operations.py  user_status.py
db/db_setup/: expense_limit_functions_and_triggers.sql
db/static/: categories.json  limit_periods.json  subcategories.json
db/tests/: conftest.py  test_shared_schema.py  test_user_based_schema.py
(+9 files in other folders)
